# Spider

./: Board.h  CMakeLists.txt  Card.h  README.md  Stockpile.h  main.cpp
